--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <h1>"Odin Recipes"</h1>
+    <ul>
+        <li><a href="recipes/lasagna.html">Recipe Title 1</a></li>
+        <li><a href="recipes/pasta.html">Recipe Title 2</a></li>
+      </ul>
 </head>
 <body>
     
